--- a/weather-app/package.json
+++ b/weather-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-app",
+  "name": "weather-app",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -32,7 +32,6 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "sass": "^1.69.5",
-    "vite": "^4.4.5",
-    "node-sass": "^6.0.1"
+    "vite": "^4.4.5"
   }
 }
