--- a/weather-app/package.json
+++ b/weather-app/package.json
@@ -10,8 +10,6 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.8",
     "@mui/icons-material": "^5.14.18",
     "@mui/material": "^5.14.18",
@@ -19,8 +17,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
-    "react-router-dom": "^6.18.0",
-    "react-swipeable-views": "latest"
+    "react-router-dom": "^6.18.0"
   },
   "devDependencies": {
     "@hookform/devtools": "^4.3.1",
